--- a/prices.html
+++ b/prices.html
@@ -29,40 +29,85 @@
     
     <div class="maincontent">
       <div class="container container--maincontent">
-        <nav class="sidebar">
-          <ul class="navigation">
-            <li class="navigation__item">
-              <a href="index.html" class="navigation__link navigation__link--main">
-                Главная
-              </a>
-            </li>
-            <li class="navigation__item">
-              <a href="feedback.html" class="navigation__link navigation__link--feedback">
-                Отзывы
-              </a>
-            </li>
-            <li class="navigation__item navigation__item--active">
-              <a href="prices.html" class="navigation__link navigation__link--price">
-                Тарифы
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <div class="content">
-            <div class="breadcrumps">
-                <ul class="breadcrumps__list">
-                  <li class="breadcrumps__item">
-                    <a href="#" class="breadcrumps__link">
-                      Главная
-                    </a>
+        <aside class="sidebar">
+          <section class="partner">
+            <!-- <div class="container"> -->
+              <h2 class="tittle parts">Партнёры</h2>
+              <div class="part-icons">
+                <ul class="part-icons__list">
+                  <li class="part-icons__item">
+                    <img class="part-icons__logo" src="images/logo-1.png" alt="">
                   </li>
-                  <li class="breadcrumps__item breadcrumps__item--active">
-                    <a href="#" class="breadcrumps__link--active">
-                      Тарифы
-                    </a>
+                  <li class="part-icons__item">
+                    <img class="part-icons__logo" src="images/logo-4.png" alt="">
+                  </li>
+                  <li class="part-icons__item">
+                    <img class="part-icons__logo" src="images/logo-2.png" alt="">
+                  </li>
+                  <li class="part-icons__item">
+                    <img class="part-icons__logo" src="images/logo-3.png" alt="">
+                  </li>
+                  <li class="part-icons__item">
+                    <img class="part-icons__logo" src="images/logo-5.png" alt="">
+                  </li>
+                  <li class="part-icons__item">
+                    <img class="part-icons__logo" src="images/logo-6.png" alt="">
                   </li>
                 </ul>
               </div>
+            <!-- </div> -->
+          </section>
+          <div class="social">
+            <h5 class="social__tittle">Наши социальные сети </h5>
+            <ul class="social__list">
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/vk.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/fb.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/google.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/twitter.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/mail.png" class="social__icon">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </aside>
+        <div class="content">
+          <nav class="navigation-l">
+            <ul class="navigation-l__list">
+              <li class="navigation-l__item ">
+                <a href="index.html" class="navigation-l__link navigation-l__link--main">
+                  Главная
+                </a>
+              </li>
+              <li class="navigation-l__item navigation-l__item--active">
+                <a href="feedback.html" class="navigation-l__link navigation-l__link--feedback">
+                  Отзывы
+                </a>
+              </li>
+              <li class="navigation-l__item navigation-l__item--active">
+                <a href="prices.html" class="navigation-l__link navigation-l__link--price">
+                  Тарифы
+                </a>
+              </li>
+            </ul>
+          </nav>
           <section class="prices">
             <div class="container container--prices">
                 <h1 class="tittle">Тарифы</h1>
@@ -162,76 +207,19 @@
                 </div>
             </div>
           </section>
-          <section class="partner">
-            <div class="container">
-              <h2 class="tittle">Партнёры</h2>
-              <div class="part-icons">
-                <ul class="part-icons__list">
-                  <li class="part-icons__item">
-                    <img class="part-icons__logo" src="images/logo-1.png" alt="">
-                  </li>
-                  <li class="part-icons__item">
-                    <img class="part-icons__logo" src="images/logo-2.png" alt="">
-                  </li>
-                  <li class="part-icons__item">
-                    <img class="part-icons__logo" src="images/logo-3.png" alt="">
-                  </li>
-                  <li class="part-icons__item">
-                    <img class="part-icons__logo" src="images/logo-4.png" alt="">
-                  </li>
-                  <li class="part-icons__item">
-                    <img class="part-icons__logo" src="images/logo-5.png" alt="">
-                  </li>
-                  <li class="part-icons__item">
-                    <img class="part-icons__logo" src="images/logo-6.png" alt="">
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </section>
+          
         </div>
       </div>
     </div>
     <footer class="footer">
-      <div class="container">
-        <div class="footer-copy">Сделано с любовью и старанием на курсе "html+css" в <a href="#"
-            class="footer-copy__link">LoftSchool</a>. <br>Автор работы: <a href="#" class="footer-copy__link">Прохладов
-            Вадим</a>
-        </div>
-        <div class="footer-logo">
-          <a href="#" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
-        </div>
-        <div class="social">
-          <h5 class="social__tittle">Наши социальные сети </h5>
-          <ul class="social__list">
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="images/vk.png" class="social__icon">
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="images/fb.png" class="social__icon">
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="images/google.png" class="social__icon">
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="images/twitter.png" class="social__icon">
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="#" class="social__link">
-                <img src="images/mail.png" class="social__icon">
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+        <div class="container">
+          <div class="footer-copy">Сделано с любовью и старанием <br> на курсе "html+css" в 
+            <a href="#" class="footer-copy__link">LoftSchool</a>. <br>
+            Автор работы: <a href="#" class="footer-copy__link">Прохладов Вадим</a>
+          </div>
+          <div class="footer-logo">
+            <a href="#" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
+          </div>
     </footer>
   </div>
 </body>
