--- a/feedback.html
+++ b/feedback.html
@@ -27,48 +27,72 @@
       </div>
     </header>
     <div class="maincontent">
-      <div class="container container--maincontent">
+      <div class="container container--maincontent fb">
         <aside class="sidebar">
-          <nav class="navigation__list">
-            <ul class="navigation">
-              <li class="navigation__item">
-                <a href="index.html" class="navigation__link navigation__link--main">
+          <section class="sale">
+            <div class="container container--sale">
+              <article class="sale__cont">
+                Для наших новых клиентов мы предлагаем <span>скидку 50%</span> на первый день!
+                <br>Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!
+              </article>
+            </div>
+          </section>
+          <div class="social">
+            <h5 class="social__tittle">Наши социальные сети </h5>
+            <ul class="social__list">
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/vk.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/fb.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/google.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/twitter.png" class="social__icon">
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link">
+                  <img src="images/mail.png" class="social__icon">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </aside>
+        <main class="content">
+          <nav class="navigation-l">
+            <ul class="navigation-l__list">
+              <li class="navigation-l__item ">
+                <a href="index.html" class="navigation-l__link navigation-l__link--main">
                   Главная
                 </a>
               </li>
-              <li class="navigation__item navigation__item--active fb">
-                <a href="feedback.html" class="navigation__link navigation__link--feedback">
+              <li class="navigation-l__item navigation-l__item--active">
+                <a href="feedback.html" class="navigation-l__link navigation-l__link--feedback">
                   Отзывы
                 </a>
               </li>
-              <li class="navigation__item">
-                <a href="prices.html" class="navigation__link navigation__link--price">
+              <li class="navigation-l__item">
+                <a href="prices.html" class="navigation-l__link navigation-l__link--price">
                   Тарифы
                 </a>
               </li>
             </ul>
           </nav>
-        </aside>
-        <main class="content">
-          <nav class="breadcrumps">
-            <ul class="breadcrumps__list">
-              <li class="breadcrumps__item">
-                <a href="#" class="breadcrumps__link">
-                  Главная
-                </a>
-              </li>
-              <li class="breadcrumps__item breadcrumps__item--active">
-                <a href="#" class="breadcrumps__link--active">
-                  Отзывы
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <section class="newsfeeds">
+          <section class="newsfeeds fb">
             <h2 class="tittle">Отзывы</h2>
-            <ul class="newsfeeds-section">
+            <ul class="newsfeeds-section fb">
               <li class="newsfeeds-section__item">
-                <div class="newsfeeds-section__img">
+                <div class="newsfeeds-section__img newsfeeds--feeds">
                   <img src="images/fback_1.jpg" alt="" class="newsfeeds-section__img-cont">
                 </div>
                 <div class="newsfeeds-section__cont">
@@ -84,7 +108,7 @@
                 </div>
               </li>
               <li class="newsfeeds-section__item">
-                <div class="newsfeeds-section__img">
+                <div class="newsfeeds-section__img newsfeeds--feeds">
                   <img src="images/fback_2.jpg" alt="" class="newsfeeds-section__img-cont">
                 </div>
                 <div class="newsfeeds-section__cont">
@@ -99,7 +123,7 @@
                 </div>
               </li>
               <li class="newsfeeds-section__item">
-                <div class="newsfeeds-section__img">
+                <div class="newsfeeds-section__img newsfeeds--feeds">
                   <img src="images/fback_3.jpg" alt="" class="newsfeeds-section__img-cont">
                 </div>
                 <div class="newsfeeds-section__cont">
@@ -115,7 +139,7 @@
                 </div>
               </li>
               <li class="newsfeeds-section__item newsfeeds-section__item--last">
-                <div class="newsfeeds-section__img">
+                <div class="newsfeeds-section__img newsfeeds--feeds">
                   <img src="images/fback_4.jpg" alt="" class="newsfeeds-section__img-cont">
                 </div>
                 <div class="newsfeeds-section__cont">
@@ -146,17 +170,7 @@
                 </ul>
                 <a href="#" class="pagination__nav-next">></a>
           </nav>
-        </main>
-      </div>
-      <section class="sale">
-        <div class="container container--sale">
-          <article class="sale__cont">
-            Для наших новых клиентов мы предлагаем <span>скидку 50%</span> на первый день!
-            Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!
-          </article>
-        </div>
-      </section>
-      <section class="feedback__container container">
+          <section class="feedback__container container">
         <div class="form">
             <form class="form__tag">
               <h2 class="tittle">Оставить отзыв</h2>
@@ -193,45 +207,18 @@
             </form>
         </div>
       </section>
+        </main>
+      </div>
+      
     </div>
     <footer class="footer">
         <div class="container">
-          <div class="footer-copy">Сделано с любовью и старанием на курсе "html+css" в 
+          <div class="footer-copy">Сделано с любовью и старанием <br> на курсе "html+css" в 
             <a href="#" class="footer-copy__link">LoftSchool</a>. <br>
             Автор работы: <a href="#" class="footer-copy__link">Прохладов Вадим</a>
           </div>
           <div class="footer-logo">
             <a href="#" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
-          </div>
-          <div class="social">
-            <h5 class="social__tittle">Наши социальные сети </h5>
-            <ul class="social__list">
-              <li class="social__item">
-                <a href="#" class="social__link">
-                  <img src="images/vk.png" class="social__icon">
-                </a>
-              </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
-                  <img src="images/fb.png" class="social__icon">
-                </a>
-              </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
-                  <img src="images/google.png" class="social__icon">
-                </a>
-              </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
-                  <img src="images/twitter.png" class="social__icon">
-                </a>
-              </li>
-              <li class="social__item">
-                <a href="#" class="social__link">
-                  <img src="images/mail.png" class="social__icon">
-                </a>
-              </li>
-            </ul>
           </div>
     </footer>
   </div>
