--- a/feedback.html
+++ b/feedback.html
@@ -195,10 +195,14 @@
                   <div class="form__tittle-input">Отображать фото в отзыве?</div>
                   <div class="form__addfoto-choice">
                     <label class="form__addfoto-check">
-                      <input type="radio" name="addfoto" value="Да"><span>Да</span>
+                      <input class="form__addfoto-button" type="radio" name="addfoto" value="Да">
+                      <div class="form__radiofake"></div>
+                      <div class="form__radio-var">Да</div>
                     </label>  
-                    <label class="addfoto__choice-check">
-                      <input type="radio" name="addfoto" value="Нет"><span>Нет</span>
+                    <label class="form__addfoto-check">
+                      <input class="form__addfoto-button" type="radio" name="addfoto" value="Нет">
+                      <div class="form__radiofake"></div>
+                      <div class="form__radio-var">Нет</div>
                     </label>  
                   </div>
                 </div>
