--- a/prices.html
+++ b/prices.html
@@ -96,7 +96,7 @@
                   Главная
                 </a>
               </li>
-              <li class="navigation-l__item navigation-l__item--active">
+              <li class="navigation-l__item navigation-l__item">
                 <a href="feedback.html" class="navigation-l__link navigation-l__link--feedback">
                   Отзывы
                 </a>
