--- a/prices.html
+++ b/prices.html
@@ -92,7 +92,7 @@
           <nav class="navigation-l">
             <ul class="navigation-l__list">
               <li class="navigation-l__item ">
-                <a href="index.html" class="navigation-l__link navigation-l__link--main">
+                <a href="main.html" class="navigation-l__link navigation-l__link--main">
                   Главная
                 </a>
               </li>
