Final v.1.4 animation hover

--- a/feedback.html
+++ b/feedback.html
@@ -20,9 +20,18 @@
           <a href="tel:+78000039210" class="contacts__phone">
             8 (800) 00-392-10
           </a>
-          <a href="#" class="contacts__chart">
-            График работы
-          </a>
+          <div class="contacts__chart">
+              <a href="#" class="contacts__chart-link">
+                График работы
+              </a>
+              <div class="chart__menu">
+                <ul class="chart__list">
+                  <li class="chart__item">пн-вс: 09:00-20:00</li>
+                  <li class="chart__item">обед: 14:00-14:30</li>
+                </ul>
+                <div class="chart__menu-trang"></div>
+              </div>
+            </div>
         </div>
       </div>
     </header>
@@ -30,7 +39,7 @@
       <div class="container container--maincontent fb">
         <aside class="sidebar">
           <section class="sale">
-            <div class="container container--sale">
+            <div class="container--sale">
               <article class="sale__cont">
                 Для наших новых клиентов мы предлагаем <span>скидку 50%</span> на первый день!
                 <br>Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!
