--- a/main.html
+++ b/main.html
@@ -39,9 +39,19 @@
           <a href="tel:+78000039210" class="contacts__phone">
             8 (800) 00-392-10
           </a>
-          <a href="#" class="contacts__chart">
-            График работы
-          </a>
+          <div class="contacts__chart">
+            <a href="#" class="contacts__chart-link">
+              График работы
+            </a>
+            <div class="chart__menu">
+              <ul class="chart__list">
+                <li class="chart__item">пн-вс: 09:00-20:00</li>
+                <li class="chart__item">обед: 14:00-14:30</li>
+              </ul>
+              <div class="chart__menu-trang"></div>
+            </div>
+          </div>
+          
         </address>
       </div>
     </header>
