--- a/prices.html
+++ b/prices.html
@@ -20,9 +20,18 @@
           <a href="tel:+78000039210" class="contacts__phone">
             8 (800) 00-392-10
           </a>
-          <a href="#" class="contacts__chart">
-            График работы
-          </a>
+          <div class="contacts__chart">
+              <a href="#" class="contacts__chart-link">
+                График работы
+              </a>
+              <div class="chart__menu">
+                <ul class="chart__list">
+                  <li class="chart__item">пн-вс: 09:00-20:00</li>
+                  <li class="chart__item">обед: 14:00-14:30</li>
+                </ul>
+                <div class="chart__menu-trang"></div>
+              </div>
+            </div>
         </div>
       </div>
     </header>
@@ -31,7 +40,6 @@
       <div class="container container--maincontent">
         <aside class="sidebar">
           <section class="partner">
-            <!-- <div class="container"> -->
               <h2 class="tittle parts">Партнёры</h2>
               <div class="part-icons">
                 <ul class="part-icons__list">
@@ -55,7 +63,6 @@
                   </li>
                 </ul>
               </div>
-            <!-- </div> -->
           </section>
           <div class="social">
             <h5 class="social__tittle">Наши социальные сети </h5>
