--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="container container--header">
         <div class="logo">
-          <a href="#" class="logo__link">
+          <a href="main.html" class="logo__link">
             <img src="images/logo-fig.png" alt="logo">
           </a>
         </div>
@@ -179,11 +179,11 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-copy">Сделано с любовью и старанием <br>на курсе "html+css" в <a href="#"
-            class="footer-copy__link">LoftSchool</adress>. <br>Автор работы: <a href="#" class="footer-copy__link">Прохладов
+            class="footer-copy__link">LoftSchool</a>. <br>Автор работы: <a href="#" class="footer-copy__link">Прохладов
             Вадим</a>
         </div>
         <div class="footer-logo">
-          <a href="#" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
+          <a href="main.html" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
         </div>
         
       </div>
