--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="container container--header">
         <div class="logo">
-          <a href="#" class="logo__link">
+          <a href="main.html" class="logo__link">
             <img src="images/logo-fig.png" alt="logo">
           </a>
         </div>
@@ -20,18 +20,18 @@
           <a href="tel:+78000039210" class="contacts__phone">
             8 (800) 00-392-10
           </a>
-          <div class="contacts__chart">
-              <a href="#" class="contacts__chart-link">
-                График работы
-              </a>
-              <div class="chart__menu">
-                <ul class="chart__list">
-                  <li class="chart__item">пн-вс: 09:00-20:00</li>
-                  <li class="chart__item">обед: 14:00-14:30</li>
-                </ul>
-                <div class="chart__menu-trang"></div>
-              </div>
+          <address class="contacts__chart">
+            <a href="#" class="contacts__chart-link">
+              График работы
+            </a>
+            <div class="chart__menu">
+              <ul class="chart__list">
+                <li class="chart__item">пн-вс: 09:00-20:00</li>
+                <li class="chart__item">обед: 14:00-14:30</li>
+              </ul>
+              <div class="chart__menu-trang"></div>
             </div>
+          </address>
         </div>
       </div>
     </header>
@@ -231,7 +231,7 @@
             Автор работы: <a href="#" class="footer-copy__link">Прохладов Вадим</a>
           </div>
           <div class="footer-logo">
-            <a href="#" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
+            <a href="main.html" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
           </div>
     </footer>
   </div>
