--- a/prices.html
+++ b/prices.html
@@ -12,27 +12,27 @@
     <header class="header">
       <div class="container container--header">
         <div class="logo">
-          <a href="#" class="logo__link">
+          <a href="main.html" class="logo__link">
             <img src="images/logo-fig.png" alt="logo">
           </a>
         </div>
-        <div class="contacts">
+        <address class="contacts">
           <a href="tel:+78000039210" class="contacts__phone">
             8 (800) 00-392-10
           </a>
           <div class="contacts__chart">
-              <a href="#" class="contacts__chart-link">
-                График работы
-              </a>
-              <div class="chart__menu">
-                <ul class="chart__list">
-                  <li class="chart__item">пн-вс: 09:00-20:00</li>
-                  <li class="chart__item">обед: 14:00-14:30</li>
-                </ul>
-                <div class="chart__menu-trang"></div>
-              </div>
+            <a href="#" class="contacts__chart-link">
+              График работы
+            </a>
+            <div class="chart__menu">
+              <ul class="chart__list">
+                <li class="chart__item">пн-вс: 09:00-20:00</li>
+                <li class="chart__item">обед: 14:00-14:30</li>
+              </ul>
+              <div class="chart__menu-trang"></div>
             </div>
-        </div>
+          </div>
+        </address>
       </div>
     </header>
     
@@ -95,7 +95,7 @@
             </ul>
           </div>
         </aside>
-        <div class="content">
+        <main class="content">
           <nav class="navigation-l">
             <ul class="navigation-l__list">
               <li class="navigation-l__item ">
@@ -215,7 +215,7 @@
             </div>
           </section>
           
-        </div>
+        </main>
       </div>
     </div>
     <footer class="footer">
@@ -225,7 +225,7 @@
             Автор работы: <a href="#" class="footer-copy__link">Прохладов Вадим</a>
           </div>
           <div class="footer-logo">
-            <a href="#" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
+            <a href="main.html" class="logo-link"><img src="images/logo-fig.png" alt="Логотип"></a>
           </div>
     </footer>
   </div>
