--- a/feedback.html
+++ b/feedback.html
@@ -16,11 +16,11 @@
             <img src="images/logo-fig.png" alt="logo">
           </a>
         </div>
-        <div class="contacts">
+        <address class="contacts">
           <a href="tel:+78000039210" class="contacts__phone">
             8 (800) 00-392-10
           </a>
-          <address class="contacts__chart">
+          <div class="contacts__chart">
             <a href="#" class="contacts__chart-link">
               График работы
             </a>
@@ -31,8 +31,8 @@
               </ul>
               <div class="chart__menu-trang"></div>
             </div>
-          </address>
-        </div>
+          </div>
+        </address>
       </div>
     </header>
     <div class="maincontent">
